--- a/Pinochle-Scoring-App/Pinochle-Scoring-App/Pinochle-Scoring-App.csproj
+++ b/Pinochle-Scoring-App/Pinochle-Scoring-App/Pinochle-Scoring-App.csproj
@@ -19,7 +19,7 @@
 		<Nullable>enable</Nullable>
 
 		<!-- Display name -->
-		<ApplicationTitle>Pinochle-Scoring-App</ApplicationTitle>
+		<ApplicationTitle>Pinochle Scoring</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.pinochlescoringapp</ApplicationId>
@@ -40,10 +40,10 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#193829" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#193829" BaseSize="128,128" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
